fixed dark mode

--- a/src/index.css
+++ b/src/index.css
@@ -28,6 +28,12 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  background-color: white;
+  color: black;
+}
+input {
+  background-color: white;
+  color: black;
 }
 
 h1 {
